Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat est ex cupiditate temporibus reprehenderit voluptate atque, libero architecto odit iusto sint ad quidem mollitia assumenda eveniet qui. Officia, tempora alias!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem molestiae similique quidem maiores cumque velit voluptatum iusto soluta nulla inventore, officia quae nam dolorem veritatis corrupti dolores impedit accusantium iure.</p>
 </body>
 </html>
